Example code execution model: apply JDK21-based cleanup